# cicd-test

./: Dockerfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  test.yaml
app/: main.py
tests/: conftest.py  test_app.py
