[project]
name = "cicd-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill",email = "kllraz@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-html = "^4.1.1"
ruff = "^0.12.2"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


########## Lint ##########
[tool.ruff]
line-length = 88
target-version = "py312"
show-fixes = true
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
]
ignore = ["ANN10"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"**/alembic/versions/*.py" = ["D"] # Don't format docstrings in alembic migrations.
"tests/**.py" = ["S101"]  # use of `assert`

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
########## Lint ##########